--- a/Backend.Shared.BusinessRules/Backend.Shared.BusinessRules.csproj
+++ b/Backend.Shared.BusinessRules/Backend.Shared.BusinessRules.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.8.3" />
     <PackageReference Include="itext7" Version="7.1.16" />
     <PackageReference Include="itext7.pdfhtml" Version="3.0.5" />
